--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        CAREER
+                        ACCELERATOR
                     </div>
                     <div class="card-body">
-                        <p>Chương trình đào tạo full-stack developer chuyên nghiệp trong vòng 6 tháng dành cho người học từ đầu.
+                        <p>Chương trình đào tạo nhanh để cập nhật công nghệ mới và những lĩnh vực có nhu cầu tuyển dụng cao.
                         <p><button class="btn btn-primary">Tìm hiểu thêm</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        CAREER
+                        PREMIUM
                     </div>
                     <div class="card-body">
-                        Chương trình đào tạo full-stack developer chuyên nghiệp trong vòng 6 tháng dành cho người học từ đầu.
+                        <p>Chương trình học tập đặc biệt dành cho lập trình viên đam mê nâng cao tay nghề và trình độ.</p>
                         <p><button class="btn btn-primary">Tìm hiểu thêm</button>
                     </div>
                 </div>
