--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <h3 class="text-center">Các chương trình đào tạo</h3>
+            <h3 class="text-center title">Các chương trình đào tạo</h3>
             <div class="card-deck text-center">
                 <div class="card">
                     <div class="card-header">
@@ -93,7 +93,7 @@
     </div>
     <div class="row gallery">
         <div class="col-12">
-            <h3 class="text-center">Hình ảnh hoạt động</h3>
+            <h3 class="text-center title">Hình ảnh hoạt động</h3>
         </div>
          <div class="col-md-4">
              <a>
@@ -124,6 +124,38 @@
             <a>
                 <img src="images/6.jpg">
             </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <h3 class="text-center title">LIÊN HỆ</h3>
+        </div>
+        <div class="col-md-6">
+            <img class="address" src="images/address.png">
+        </div>
+        <div class="col-md-6">
+            <h3 class="text-center">Liên hệ tư vấn</h3>
+            <form>
+                <div class="form-group">
+                    <label>Họ và tên:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>Email:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>Số điện thoại:</label>
+                    <input type="text" class="form-control"/>
+                </div>
+                <div class="form-group">
+                    <label>Nội dung:</label>
+                    <textarea class="form-control"></textarea>
+                </div>
+                <div class="text-center">
+                    <button class="btn btn-primary btn-lg">LIÊN HỆ</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
