--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>CodeGym</title>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -12,7 +13,8 @@
         <a class="navbar-brand" href="#">
             <img class="codegym-logo" src="images/CodeGym.png"/>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -42,18 +44,39 @@
     </div>
 </nav>
 <div class="container">
-    <div class="banner">
-        <div class="heading">
-            <h3>Đào tạo lập trình</h3>
-            <h1>Hiện đại</h1>
+    <div class="row">
+        <div class="carousel slide col-12" data-ride="carousel" id="mySlider">
+            <div class="carousel-inner">
+                <div class="carousel-item active banner slide1">
+                    <div class="heading">
+                        <h3>Đào tạo lập trình</h3>
+                        <h1>Hiện đại</h1>
+                    </div>
+                </div>
+                <div class="carousel-item banner slide2">
+                    <div class="heading">
+                        <h3>Đào tạo lập trình</h3>
+                        <h1>Hiện đại</h1>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#mySlider" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#mySlider" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
         </div>
     </div>
+
     <div class="row codegym-intro">
         <div class="col-md-3">
             <img src="images/CodeGym-Logo-small.png">
         </div>
         <div class="col-md-9">
-            <p>CodeGym ra đời với mục tiêu đào tạo những lập trình viên hiện đại, là chủ lực cung cấp nhân lực chất lượng cao cho ngành công nghiệp, góp phần nâng tầm phát triển ngành phần mềm Việt Nam, tiến kịp tiêu chuẩn quốc tế.</p>
+            <p>CodeGym ra đời với mục tiêu đào tạo những lập trình viên hiện đại, là chủ lực cung cấp nhân lực chất
+                lượng cao cho ngành công nghiệp, góp phần nâng tầm phát triển ngành phần mềm Việt Nam, tiến kịp tiêu
+                chuẩn quốc tế.</p>
         </div>
     </div>
     <div class="row">
@@ -65,8 +88,10 @@
                         CAREER
                     </div>
                     <div class="card-body">
-                        <p>Chương trình đào tạo full-stack developer chuyên nghiệp trong vòng 6 tháng dành cho người học từ đầu.
-                        <p><button class="btn btn-primary">Tìm hiểu thêm</button>
+                        <p>Chương trình đào tạo full-stack developer chuyên nghiệp trong vòng 6 tháng dành cho người học
+                            từ đầu.
+                        <p>
+                            <button class="btn btn-primary"  data-toggle="modal" data-target="#exampleModal">Tìm hiểu thêm</button>
                     </div>
 
                 </div>
@@ -75,8 +100,10 @@
                         ACCELERATOR
                     </div>
                     <div class="card-body">
-                        <p>Chương trình đào tạo nhanh để cập nhật công nghệ mới và những lĩnh vực có nhu cầu tuyển dụng cao.
-                        <p><button class="btn btn-primary">Tìm hiểu thêm</button>
+                        <p>Chương trình đào tạo nhanh để cập nhật công nghệ mới và những lĩnh vực có nhu cầu tuyển dụng
+                            cao.
+                        <p>
+                            <button class="btn btn-primary">Tìm hiểu thêm</button>
                     </div>
                 </div>
                 <div class="card">
@@ -84,8 +111,10 @@
                         PREMIUM
                     </div>
                     <div class="card-body">
-                        <p>Chương trình học tập đặc biệt dành cho lập trình viên đam mê nâng cao tay nghề và trình độ.</p>
-                        <p><button class="btn btn-primary">Tìm hiểu thêm</button>
+                        <p>Chương trình học tập đặc biệt dành cho lập trình viên đam mê nâng cao tay nghề và trình
+                            độ.</p>
+                        <p>
+                            <button class="btn btn-primary">Tìm hiểu thêm</button>
                     </div>
                 </div>
             </div>
@@ -95,11 +124,11 @@
         <div class="col-12">
             <h3 class="text-center title">Hình ảnh hoạt động</h3>
         </div>
-         <div class="col-md-4">
-             <a>
-                 <img src="images/1.jpg">
-             </a>
-         </div>
+        <div class="col-md-4">
+            <a>
+                <img src="images/1.jpg">
+            </a>
+        </div>
         <div class="col-md-4">
             <a>
                 <img src="images/2.jpg">
@@ -196,9 +225,34 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header"> <h5 class="modal-title" id="exampleModalLabel">Gioi thieu khoa hoc</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Content here
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Thoat</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
 </body>
 </html>
